Automatically backed up by Learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,5 @@
 
 <form action="/checkout" method="POST">
-  <input type="text" class="name" name="name">
+  Item:<input type="text" class="item" name="Item">
+  <input type="submit" value="submit>"
 </form>
