--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
 
 <form action="/checkout" method="POST">
-  Item:<input type="text" id="item" name="Item">
+  Item:<input type="text" id="item" name="item">
   <input type="submit" value="submit>"
 </form>
